--- a/stockApp - ui/src/App.css
+++ b/stockApp - ui/src/App.css
@@ -1,215 +1,150 @@
-.App {
-  text-align: center;
-  background-color: #d6f4f2;
+
+.login-page {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
+  background-image: url('MarketLab Desktop.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  image-rendering: crisp-edges;
+}
+
+.login-registration-box {
+  font-family: 'Poppins', sans-serif;
+  position: relative;
+  width: 400px;
+  height: 450px;
+  background: transparent;
+  border: 2px solid rgba(255, 255, 255, .5);
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: Black;
+  align-items: stretch;
+  padding: 0 32px;
+  backdrop-filter: blur(15px);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-.collection-container {
-  border: 6px solid rgb(0, 255, 136);
-  padding: 32px;
-}
-
-.company-name {
-  font-size: calc(10px + 2vmin);
-  color: black;
-  font-weight: bold;
-  font-size:1.1em;
-  font-style: italic;
-}
-
-.ticker-symbol {
-  font-size: 66%;
-  color: #CDCDCD;
-  font-style: italic;
-}
-
-.stock-name {
-  padding: 5px 15px 5px 15px;
-  background-color:#FCFCFC;
-  text-decoration:none;
-  color:black;
-  line-height:1;
-  vertical-align:middle;
-  border: 2px outset gray;
-  font-size:1.1em;
-  font-weight:bold;
-  border-radius:3px;
-  text-align: left;
-  border-collapse: separate;
-  border-radius: 10px;
-}
-
-.title1{
-  font-size: calc(10px + 2vmin);
-  padding: 5px 15px 5px 15px;
-  background-color:#FCFCFC;
-  text-decoration:none;
-  color:black;
-  line-height:1;
-  vertical-align:middle;
-  border: 2px outset gray;
-  font-size:1.1em;
-  font-weight:bold;
-  border-radius:3px;
+h2 {
+  font-size: 2em;
+  color: white;
   text-align: center;
-  border-collapse: separate;
-  border-radius: 10px;
-  width: 70%;
-  margin:auto;
 }
 
-.title2{
-  font-size: calc(10px + 2vmin);
-  padding: 5px 15px 5px 15px;
-  background-color:#FCFCFC;
-  text-decoration:none;
-  color:grey;
-  line-height:1;
-  vertical-align:middle;
-  border: 2px outset gray;
-  font-size:1.1em;
-  font-weight: bold;
-  border-radius:3px;
-  text-align: center;
-  border-collapse: separate;
-  border-radius: 10px;
-  width: 30%;
-  margin:auto;
-  margin-bottom: 5%;
+.input-box {
+  position: relative;
+  margin-bottom: 1.5rem;
+  border-bottom: 2px solid white;
+  width: 100%;
 }
 
-.stock-data {
-  font-size: calc(10px + 2vmin);
-  padding: 5px 15px 5px 15px;
-  background-color:#FCFCFC;
-  text-decoration:none;
-  color:black;
-  line-height:1;
-  vertical-align:middle;
-  border: 2px outset gray;
-  font-size:1.1em;
-  font-weight:bold;
-  border-radius:3px;
-  text-align: center;
-  border-collapse: separate;
-  border-radius: 10px;
+.input-box label {
+  position: absolute;
+
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 1em;
+  color: white;
+  pointer-events: none;
+  transition: 0.3s;
+  background: transparent;
 }
 
-.buy-button {
-  font-size: calc(10px + 2vmin);
-  padding: 5px 15px 5px 15px;
-  background-color:#FCFCFC;
-  text-decoration:none;
-  color:black;
-  line-height:1;
-  vertical-align:middle;
-  border: 2px outset gray;
-  font-size:1.1em;
-  font-weight:bold;
-  border-radius:3px;
-  text-align: center;
-  border-collapse: separate;
-  border-radius: 10px;
+.input-box input{
+  width: 100%;
+  height: 50px;
+  background: transparent;
+  border: none;
+  outline: none;
+  font-size: 1em;
+  color: white;
+  padding: 0 8px 0 5px;
 }
 
-.buy-button:hover{
-  color:White;
-  background-color:rgb(50, 60, 114);
+.input-box input:focus + label,
+.input-box input:not(:placeholder-shown) + label {
+  top: -5px;
+  font-size: 0.85em;
+  color: #fff;
 }
 
-.purchase-table-size{
-  width: 33%;
-  margin: auto;
-  margin-bottom: 5%;
+.input-box .icon {
+  position: absolute;
+  right: 8px;
+  width: 100%;
+  color: white;
+  font-size: 1.2em;
+  line-height: 57;
+}
+
+.remember-me {
+  margin: -15px 0 15px;
+  width: 100%;
+  font-size: .9em;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+}
+
+.remember-me label input {
+  margin-right: 3px;
+}
+
+.remember-me a {
+  color: white;
+  text-decoration: none;
+}
+
+.remember-me a:hover {
+  text-decoration: underline;
 }
 
 button{
-  font-size: calc(10px + 2vmin);
-  padding: 20px 15px 20px 15px;
-  background-color:#FCFCFC;
-  text-decoration:none;
-  color:red;
-  line-height:1;
-  vertical-align:middle;
-  border: 2px outset gray;
-  font-size:1.1em;
-  font-weight:bold;
-  border-radius:3px;
+  width: 100%;
+  height: 40px;
+  background: white;
+  border: none;
+  outline: none;
+  border-radius: 40px;
+  cursor: pointer;
+  font-size: 1em;
+  color: black;
+  font-weight: 500;
+}
+
+.register-link {
+  font-size: .9em;
+  color: white;
   text-align: center;
-  border-collapse: separate;
-  border-radius: 10px;
-  margin-right: 10px;
-  margin-left: 10px;
+  margin: 25px 0 10px;
+
 }
 
-
-table {
-  width: 80%;
-  max-width: 100vw;
-  margin: auto;
-  border-collapse: separate;
-  border-spacing: 15px;
+.register-link p a {
+  color: white;
+  text-decoration: none;
+  font-weight: 600;
 }
 
-th:first-child{
-  width: 60%
-}
-th:second-child{
-  width: 25%
+.register-link p a:hover {
+  text-decoration: underline;
 }
 
-footer{
-  font-size: calc(10px + 2vmin);
-  padding: 20px 15px 20px 15px;
-  font-size:1.1em;
-  font-weight:bold;
-  margin-right: 5%;
-  margin-left: 5%;
-}
+@media (max-width: 360px){
+  .login-registration-box {
+    width: 100%;
+    height: 100vh;
+    border: none;
+    border-radius: 0;
+  }
 
-.homepage-header{
-  display: flex;
-  justify-content: flex-end;
-  padding: 10px;
-}
-
-.basic-buttons{
-  font-size: calc(10px + 2vmin);
-  padding: 5px 15px 5px 15px;
-  background-color:#FCFCFC;
-  text-decoration:none;
-  color:black;
-  line-height:1;
-  vertical-align:middle;
-  border: 2px outset gray;
-  font-size:1.1em;
-  font-weight:bold;
-  border-radius:3px;
-  text-align: center;
-  border-collapse: separate;
-  border-radius: 10px;
-}
-
-.basic-buttons:hover{
-  color:White;
-  background-color:rgb(50, 60, 114);
-}
-
-ul{
-  font-size: calc(10px + 2vmin);
-  padding: 20px 15px 20px 15px;
-  text-align: left;
-  font-size:1.1em;
-  font-weight:bold;
-  margin-right: 5%;
-  margin-left: 5%;
+  .input-box {
+    width: 290px;
+  }
 }
