Updated File structure and Registration Page

--- a/stockApp - ui/src/App.css
+++ b/stockApp - ui/src/App.css
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-image: url('MarketLab Desktop.png');
+  background-image: url('MarketLab.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
